apps/semaphore/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/part-of: semaphore
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore
      app.kubernetes.io/part-of: semaphore
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: semaphore
        app.kubernetes.io/part-of: semaphore
    spec:
      enableServiceLinks: false
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:latest
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: semaphore-data
              mountPath: /etc/semaphore
      volumes:
        - name: semaphore-data
          persistentVolumeClaim:
            claimName: semaphore-data
      nodeSelector:
        kubernetes.io/hostname: pj
