apps/semaphore/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore-postgres
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: semaphore-postgres
    app.kubernetes.io/part-of: semaphore
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore-postgres
      app.kubernetes.io/part-of: semaphore
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: semaphore-postgres
        app.kubernetes.io/part-of: semaphore
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: semaphore-postgres-data
      nodeSelector:
        kubernetes.io/hostname: pj
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-postgres
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: semaphore-postgres
    app.kubernetes.io/part-of: semaphore
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: semaphore-postgres
    app.kubernetes.io/part-of: semaphore
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
