apps/semaphore/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/part-of: semaphore
spec:
  type: ClusterIP
  clusterIP: 10.43.100.15
  selector:
    app.kubernetes.io/name: semaphore
    app.kubernetes.io/part-of: semaphore
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
